# powerpoint-transformation-xtreme

./: .gitignore
Research/: Lip-Sync.md  avatar-generation.md  create-video.md  text-to-text.md
avatar-generation/: Dockerfile  README.md  argparser.py  main.py
create-video/: Dockerfile  README.md  ppt2image.py  ppt2video.py  requirements.txt
lip-sync/: Dockerfile  GdriveDown.py  README.md  multiple_inference.py
pipeline/: .gitignore  compose.yaml  gui.py  main.py  pyproject.toml  requirements.txt
test/: Dockerfile  compose.yaml  main.py
test/src/: docker.py
text-to-text/: .gitignore  2.2_video_ppt.pptx  Dockerfile  main.py  pyproject.toml
text-to-text/src/: main.py
voice-cloning/TTS_VC_english/: Dockerfile  README.md  requirements.txt  voice_cloning_tts.py
voice-cloning/TTS_VC_english/encoder/: audio.py
voice-cloning/TTS_VC_english/models_CorentinJ/: README.md
voice-cloning/TTS_VC_english/synthesizer/: inference.py
